# POA

./: README.md
lab01/: .gitignore  CMakeLists.txt  README.md  Rapport.md  jallon_surdez_uml_lab1.mdj
lab01/src/: .clang-format  Matrix.cpp  Matrix.hpp  main.cpp
lab01/src/operations/: Addition.cpp  Addition.hpp  Multiplication.cpp  Multiplication.hpp  Operation.hpp  Subtraction.cpp  Subtraction.hpp
lab01/src/utils/: utils.cpp  utils.hpp
lab01/test/: test.cpp
lab02/: CMakeLists.txt  README.md  Rapport.md  UML.puml  UML.sly
lab02/src/: main.cpp
lab02/src/ship/: Ship.cpp  Ship.hpp
lab02/src/ship/TIE/: TIE.cpp  TIE.hpp  TIEBaseModel.cpp  TIEBaseModel.hpp  TIEInterceptor.cpp  TIEInterceptor.hpp
lab02/src/ship/cargo/: CargoShip.cpp  CargoShip.hpp  Shuttle.cpp  Shuttle.hpp  StarDreadnought.cpp  StarDreadnought.hpp
lab02/src/squadron/: Squadron.cpp  Squadron.hpp
lab02/src/test/: test.cpp
lab02/src/utils/: ostreamUtils.cpp  ostreamUtils.hpp
lab03/: CMakeLists.txt  README.md  Rapport.md
lab03/src/: Controller.cpp  Controller.hpp  StateResult.cpp  StateResult.hpp  main.cpp
lab03/src/containers/: Bank.cpp  Bank.hpp  Boat.cpp  Boat.hpp  Container.cpp  Container.hpp
lab03/src/person/: Boy.cpp  Boy.hpp  Girl.cpp  Girl.hpp  IndependentPerson.cpp  IndependentPerson.hpp  Kid.cpp  Kid.hpp  Person.cpp  Person.hpp  Thief.cpp  Thief.hpp
lab04/: .gitignore  CMakeLists.txt  README.html  README.md  Rapport.md  classDiagramm.puml
lab04/src/: main.cpp
lab04/src/action/: Action.cpp  Action.hpp  Bite.cpp  Bite.hpp  Kill.cpp  Kill.hpp  Move.cpp  Move.hpp
lab04/src/display/: FieldController.cpp  FieldController.hpp
lab04/src/field/: Field.cpp  Field.hpp  Field_Generic_Impl.hpp
lab04/src/humanoids/: Buffy.cpp  Buffy.hpp  Human.cpp  Human.hpp  Humanoid.cpp  Humanoid.hpp  Vampire.cpp  Vampire.hpp
lab04/src/stats/: FieldStatsCalculator.cpp  FieldStatsCalculator.hpp
lab04/src/utils/: Random.cpp  Random.hpp  Status.hpp  Vec2D.cpp  Vec2D.hpp
